Fix terms html encoding

--- a/app/storjshare.html
+++ b/app/storjshare.html
@@ -430,7 +430,7 @@
             </li>
             <li>
               <h4>Eligibility; Authority</h4>
-              <p>You represent and warrant that you are at least 18 years of age.  If you are entering into this agreement behalf of any entity: (a) you represent and warrant that you are authorized to accept these Storage Sharing Terms on such entity’s behalf and that such entity will be responsible for breach of these Storage Sharing Terms by you or any other employee or agent of such entity; and (b) references to &ldquo;you&rdquo; in these Storage Sharing Terms refer to you and such entity, collectively.</p>
+              <p>You represent and warrant that you are at least 18 years of age.  If you are entering into this agreement behalf of any entity: (a) you represent and warrant that you are authorized to accept these Storage Sharing Terms on such entity's behalf and that such entity will be responsible for breach of these Storage Sharing Terms by you or any other employee or agent of such entity; and (b) references to &ldquo;you&rdquo; in these Storage Sharing Terms refer to you and such entity, collectively.</p>
             </li>
             <li>
               <h4>Software</h4>
@@ -455,9 +455,9 @@
             </li>
             <li>
               <h4>Compensation</h4>
-              <p>(a) Subject to these Storage Sharing Terms, Company will pay you based upon the amount of Space utilized by Company and users of its Storage Services and the prices you have designated for such Space via the Software (&ldquo;Storage Fees&rdquo;).  We will pay the Storage Fees in one or more of the following, in our discretion: (i) Company’s proprietary virtual currency, called Storjcoin X (SJCX); (ii) Bitcoin (BTC); or (iii) U.S. dollars.</p>
+              <p>(a) Subject to these Storage Sharing Terms, Company will pay you based upon the amount of Space utilized by Company and users of its Storage Services and the prices you have designated for such Space via the Software (&ldquo;Storage Fees&rdquo;).  We will pay the Storage Fees in one or more of the following, in our discretion: (i) Company's proprietary virtual currency, called Storjcoin X (SJCX); (ii) Bitcoin (BTC); or (iii) U.S. dollars.</p>
               <p>(b) You represent and warrant that you are authorized to receive the Storage Fees in any payment method you designate via the Software that is acceptable to us (&ldquo;Payment Method&rdquo;).  If your Payment Method cannot be verified, is invalid, or is not otherwise acceptable, your right to receive payment of the Storage Fees may be suspended automatically.</p>
-              <p>(c) You will be responsible for payment of all applicable taxes associated with our payment of Storage Fees, including any taxes on gross receipts or income.  Upon Company’s request, you will accurately and promptly complete and return to Company any tax forms indicated by Company.</p>
+              <p>(c) You will be responsible for payment of all applicable taxes associated with our payment of Storage Fees, including any taxes on gross receipts or income.  Upon Company's request, you will accurately and promptly complete and return to Company any tax forms indicated by Company.</p>
             </li>
             <li>
               <h4>Termination</h4>
@@ -473,7 +473,7 @@
             </li>
             <li>
               <h4>Indemnification</h4>
-              <p>(a) To the fullest extent permitted by applicable law, you will defend, indemnify and hold harmless Company and our respective past, present and future employees, officers, directors, contractors, consultants, equity holders, suppliers, vendors, service providers, parent companies, subsidiaries, affiliates, agents, representatives, predecessors, successors and assigns (the &ldquo;Company Parties&rdquo;) from and against all claims, damages, costs and expenses (including attorneys’ fees) that arise from or relate to: (i) your use of the Software; (ii) your sharing or rental of Space; (iii) any Feedback you provide; or (iv) your breach of any of these Storage Sharing Terms.</p>
+              <p>(a) To the fullest extent permitted by applicable law, you will defend, indemnify and hold harmless Company and our respective past, present and future employees, officers, directors, contractors, consultants, equity holders, suppliers, vendors, service providers, parent companies, subsidiaries, affiliates, agents, representatives, predecessors, successors and assigns (the &ldquo;Company Parties&rdquo;) from and against all claims, damages, costs and expenses (including attorneys' fees) that arise from or relate to: (i) your use of the Software; (ii) your sharing or rental of Space; (iii) any Feedback you provide; or (iv) your breach of any of these Storage Sharing Terms.</p>
               <p>(b) Company reserves the right to exercise sole control over the defense of any claim subject to indemnification under Section 11(a), at your expense.  This indemnity is in addition to, and not in lieu of, any other indemnities set forth in a written agreement between you and Company.</p>
             </li>
             <li>
@@ -489,7 +489,7 @@
             </li>
             <li>
               <h4>Release</h4>
-              <p>To the fullest extent permitted by applicable law, you release Company and the other Company Parties from responsibility, liability, claims, demands and/or damages (actual and consequential) of every kind and nature, known and unknown (including, but not limited to, claims of negligence), arising out of or related to the acts or omissions of third parties. <b>You expressly waive any rights you may have under California Civil Code § 1542 as well as any other statute or common law principles that would otherwise limit the coverage of this release to include only those claims which you may know or suspect to exist in your favor at the time of agreeing to this release.</b></p>
+              <p>To the fullest extent permitted by applicable law, you release Company and the other Company Parties from responsibility, liability, claims, demands and/or damages (actual and consequential) of every kind and nature, known and unknown (including, but not limited to, claims of negligence), arising out of or related to the acts or omissions of third parties. <b>You expressly waive any rights you may have under California Civil Code &sect; 1542 as well as any other statute or common law principles that would otherwise limit the coverage of this release to include only those claims which you may know or suspect to exist in your favor at the time of agreeing to this release.</b></p>
             </li>
             <li>
               <h4>Dispute Resolution; Arbitration</h4>
@@ -497,7 +497,7 @@
               <ol>
                 <li>
                   <h4>Binding Arbitration</h4>
-                  <p>Except for any disputes, claims, suits, actions, causes of action, demands or proceedings (collectively, &ldquo;<b>Disputes</b>&rdquo;) in which either party seeks to bring an individual action in small claims court or seeks injunctive or other equitable relief for the alleged unlawful use of intellectual property, including, without limitation, copyrights, trademarks, trade names, logos, trade secrets or patents, you and Company (a) waive your and Company’s respective rights to have any and all Disputes arising from or related to these Storage Sharing Terms resolved in a court, and (b) waive your and Company’s respective rights to a jury trial. Instead, you and Company will arbitrate Disputes through binding arbitration (which is the referral of a Dispute to one or more persons charged with reviewing the Dispute and making a final and binding determination to resolve it instead of having the Dispute decided by a judge or jury in court).</p>
+                  <p>Except for any disputes, claims, suits, actions, causes of action, demands or proceedings (collectively, &ldquo;<b>Disputes</b>&rdquo;) in which either party seeks to bring an individual action in small claims court or seeks injunctive or other equitable relief for the alleged unlawful use of intellectual property, including, without limitation, copyrights, trademarks, trade names, logos, trade secrets or patents, you and Company (a) waive your and Company's respective rights to have any and all Disputes arising from or related to these Storage Sharing Terms resolved in a court, and (b) waive your and Company's respective rights to a jury trial. Instead, you and Company will arbitrate Disputes through binding arbitration (which is the referral of a Dispute to one or more persons charged with reviewing the Dispute and making a final and binding determination to resolve it instead of having the Dispute decided by a judge or jury in court).</p>
                 </li>
                 <li>
                   <h4>No Class Arbitrations, Class Actions or Representative Actions</h4>
@@ -505,7 +505,7 @@
                 </li>
                 <li>
                   <h4>Federal Arbitration Act</h4>
-                  <p>These Storage Sharing Terms affect interstate commerce and that the enforceability of this Section 15 will be both substantively and procedurally governed by and construed and enforced in accordance with the Federal Arbitration Act, 9 U.S.C. § 1 et seq. (the &ldquo;<b>FAA</b>&rdquo;), to the maximum extent permitted by applicable law.</p>
+                  <p>These Storage Sharing Terms affect interstate commerce and that the enforceability of this Section 15 will be both substantively and procedurally governed by and construed and enforced in accordance with the Federal Arbitration Act, 9 U.S.C. &sect; 1 et seq. (the &ldquo;<b>FAA</b>&rdquo;), to the maximum extent permitted by applicable law.</p>
                 </li>
                 <li>
                   <h4>Notice; Informal Dispute Resolution</h4>
@@ -517,7 +517,7 @@
                 </li>
                 <li>
                   <h4>Authority of Arbitrator</h4>
-                  <p>As limited by the FAA, these Storage Sharing Terms and the applicable JAMS rules, the arbitrator will have (a) the exclusive authority and jurisdiction to make all procedural and substantive decisions regarding a Dispute, including the determination of whether a Dispute is arbitrable, and (b) the authority to grant any remedy that would otherwise be available in court; provided, however, that the arbitrator does not have the authority to conduct a class arbitration or a representative action, which is prohibited by these Storage Sharing Terms. The arbitrator may only conduct an individual arbitration and may not consolidate more than one individual’s claims, preside over any type of class or representative proceeding or preside over any proceeding involving more than one individual.</p>
+                  <p>As limited by the FAA, these Storage Sharing Terms and the applicable JAMS rules, the arbitrator will have (a) the exclusive authority and jurisdiction to make all procedural and substantive decisions regarding a Dispute, including the determination of whether a Dispute is arbitrable, and (b) the authority to grant any remedy that would otherwise be available in court; provided, however, that the arbitrator does not have the authority to conduct a class arbitration or a representative action, which is prohibited by these Storage Sharing Terms. The arbitrator may only conduct an individual arbitration and may not consolidate more than one individual's claims, preside over any type of class or representative proceeding or preside over any proceeding involving more than one individual.</p>
                 </li>
                 <li>
                   <h4>Rules of JAMS</h4>
