--- a/app/storjshare.html
+++ b/app/storjshare.html
@@ -13,11 +13,14 @@
       <div class="col-xs-12 col-sm-8 col-sm-push-2 col-md-6 col-md-push-3">
         <div id="main">
 
-          <div class="modal fade text-center" id="loading" tabindex="-1" role="dialog" aria-labelledby="modalAbout">
+          <div class="modal fade text-center" id="loading" tabindex="-1" role="dialog" aria-labelledby="modalLoading">
             <div class="modal-dialog" role="document">
               <div class="modal-content">
+                <div class="modal-header">
+                  <h4 class="modal-title">Counting Shards</h4>
+                </div>
                 <div class="modal-body">
-                  <p>Counting Shards. This only happens once. This may take a moment, so grab a cocktail!</p>
+                  <p>This only happens once and may take a moment, so grab a cocktail!</p>
                   <div class="progress">
                     <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="userdata.tabs[current].spaceUsedPercent" style="width: 100%;">
                     </div>
