--- a/app/storjshare.html
+++ b/app/storjshare.html
@@ -145,7 +145,7 @@
                       <div class="col-xs-12">
                         <div class="progress">
                           <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="userdata.tabs[current].spaceUsedPercent" aria-valuemin="0" aria-valuemax="100" v-bind:style="{ width: userdata.tabs[current].spaceUsedPercent + '%' }">
-                            {{userdata.tabs[current].spaceUsedPercent}}%
+                            <div class="progress-percentage">{{userdata.tabs[current].spaceUsedPercent}}%</div>
                           </div>
                         </div>
                       </div>
