--- a/app/storjshare.html
+++ b/app/storjshare.html
@@ -39,13 +39,13 @@
               <div class="col-xs-8 text-right">
                 <div class="btn-group">
                   <button class="btn btn-drives dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                    Drive #{{current}} <span class="caret"></span>
+                    Drive ({{userdata.tabs[current].shortId}}) <span class="caret"></span>
                   </button>
                   <ul class="dropdown-menu pull-right" role="tablist">
                     <template v-for="(index, tab) in userdata.tabs">
                       <li role="presentation" class="driveTab" v-bind:class="{'active':tab.active}">
                         <a href="#" role="tab" data-toggle="tab" v-on:click="showTab(index)">
-                          Drive #{{index}}
+                          Drive ({{tab.shortId}})
                           <span class="remove" v-if="tab.active" href="#" class="pull-right" v-on:click="removeTab">
                             <i class="fa fa-times"></i>
                           </span>
@@ -242,8 +242,8 @@
 
         <ul class="nav nav-tabs">
           <li class="active"><a data-toggle="tab" href="#SettingsGeneral">General</a></li>
-          <li><a data-toggle="tab" href="#SettingsNetwork">Network (Drive #{{ current }})</a></li>
-          <li><a data-toggle="tab" href="#SettingsTunnels">Tunnels (Drive #{{ current }})</a></li>
+          <li><a data-toggle="tab" href="#SettingsNetwork">Network (Drive {{userdata.tabs[current].shortId}})</a></li>
+          <li><a data-toggle="tab" href="#SettingsTunnels">Tunnels (Drive {{userdata.tabs[current].shortId}})</a></li>
         </ul>
 
         <div class="modal-body text-left">
