--- a/app/storjshare.html
+++ b/app/storjshare.html
@@ -30,7 +30,6 @@
             </div>
           </div>
 
-
           <header>
             <div class="row">
               <div class="col-xs-4">
@@ -318,6 +317,16 @@
                   </select>
                 </div>
               </div>
+              <div class="row form-group">
+                <div class="col-xs-12">
+                  <label>Database Repair</label>
+                </div>
+                <div class="col-xs-12">
+                  <div class="alert alert-warning" role="alert">Only use this button to attempt to repair a corrupted shard database or force compaction.</div>
+                  <button class="btn btn-blue btn-block" type="button" v-on:click="repairdb">Repair Drive ({{userdata.tabs[current].shortId}})</button>
+                </div>
+              </div>
+
 
             </div>
 
@@ -574,6 +583,23 @@
         </div>
         <div class="modal-footer">
           <button v-on:click='accepted' type="button" class="btn btn-green" data-dismiss="modal">I Accept</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="modal fade text-center" id="repairing" style="z-index:9001;" role="dialog" aria-labelledby="modalLoading">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title">Repairing your Database</h4>
+        </div>
+        <div class="modal-body">
+          <p>Don't fucking move.</p>
+          <div class="progress">
+            <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="userdata.tabs[current].spaceUsedPercent" style="width: 100%;">
+            </div>
+          </div>
         </div>
       </div>
     </div>
