Fixed the repairing message. my b

--- a/app/storjshare.html
+++ b/app/storjshare.html
@@ -595,7 +595,7 @@
           <h4 class="modal-title">Repairing your Database</h4>
         </div>
         <div class="modal-body">
-          <p>Don't fucking move.</p>
+          <p>Please do not close the program while this is running.</p>
           <div class="progress">
             <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="userdata.tabs[current].spaceUsedPercent" style="width: 100%;">
             </div>
