--- a/app/storjshare.html
+++ b/app/storjshare.html
@@ -22,7 +22,7 @@
                 <div class="modal-body">
                   <p>Something has happened with drive [ {{error.drive}} ]!</p><br />
                   <p>{{error.message}}</p><br />
-                </p>If the problem persists check your logs for more info, and please open an issue with us at <a class="logo" href="#" onclick="require('shell').openExternal('https://github.com/Storj/storjshare-gui/issues');" >github</a>!!</p>
+                </p>If the problem persists check your logs for more info, and please open an issue with us at <a href="#" onclick="require('shell').openExternal('https://github.com/Storj/storjshare-gui/issues');" >github</a>!!</p>
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-blue" data-dismiss="modal">Close</button>
