fix transitioning logic

--- a/app/storjshare.html
+++ b/app/storjshare.html
@@ -183,13 +183,13 @@
               <section class="action">
                 <div class="row">
                   <div class="col-xs-12">
-                    <button v-if="!userdata.tabs[current].farmer && !transitioning" class="btn btn-block start" data-style="expand-left" v-on:click="startFarming">
+                    <button v-if="!userdata.tabs[current].farmer && !userdata.tabs[current].transitioning" class="btn btn-block start" data-style="expand-left" v-on:click="startFarming">
                       <span class="start-label">START</span>
                     </button>
-                    <button v-if="transitioning" class="btn btn-block transitioning" data-style="expand-left" disabled>
+                    <button v-if="userdata.tabs[current].transitioning" class="btn btn-block transitioning" data-style="expand-left" disabled>
                       <span class="start-label">PREPARING...</span>
                     </button>
-                    <button v-if="userdata.tabs[current].farmer && !transitioning" class="btn btn-block stop" data-style="expand-left" v-on:click="stopFarming">
+                    <button v-if="userdata.tabs[current].farmer && !userdata.tabs[current].transitioning" class="btn btn-block stop" data-style="expand-left" v-on:click="stopFarming">
                       <i class="fa fa-check"></i>
                       <span class="start-label">STORJ SHARE IS RUNNING</span>
                     </button>
