--- a/app/wizard4.html
+++ b/app/wizard4.html
@@ -33,7 +33,9 @@
     </div>
     <div class="row text-center">
       <div class="col-12">
-        <input type="number" placeholder="Port Number">
+        <label for="portNumber">Port Number</label>
+        <input type="number" id="portNumber" placeholder="" class="port-number text-center">
+        <a href="" class="btn btn-secondary mr-3">Random</a>
         <a href="" class="btn">Next</a>
       </div>
     </div>
