Update css and templates

--- a/app/wizard2.html
+++ b/app/wizard2.html
@@ -31,7 +31,7 @@
         <p>Storj Share uses the free space on your drive, <br class="hidden-sm-down">to save encrypted bits of files while you are online.</p>
       </div>
     </div>
-    <div class="row text-center">
+    <div class="row text-center mt-3">
       <div class="col-12">
         <input type="text" placeholder="Select a location for the data">
         <a href="" class="btn">Select Location</a>
