--- a/app/wizard4.html
+++ b/app/wizard4.html
@@ -31,7 +31,7 @@
         <p>Port to bind for RPC server, make sure this is forwarded if behind <br class="hidden-sm-down">a NAT or firewall - otherwise Storj Share will try to punch out.</p>
       </div>
     </div>
-    <div class="row text-center">
+    <div class="row text-center mt-3">
       <div class="col-12">
         <label for="portNumber">Port Number</label>
         <input type="number" id="portNumber" placeholder="" class="port-number text-center">
