--- a/app/wizard.html
+++ b/app/wizard.html
@@ -29,7 +29,7 @@
       <div class="col-12">
         <h2>Welcome to Storj Share!</h2>
         <p>Using Storj Share, you can earn StorjCoin X (SJCX) <br class="hidden-sm-down">by renting out your extra hard drive space.</p>
-        <a href="" class="btn">Start Setup</a>
+        <a href="" class="btn mt-4">Start Setup</a>
       </div>
     </div>
   </div>
