--- a/app/wizard3.html
+++ b/app/wizard3.html
@@ -46,7 +46,7 @@
         </div>
       </div>
     </div>
-    <div class="row text-center justify-content-center">
+    <div class="row text-center justify-content-center mt-2">
       <div class="col col-md-10 col-lg-8 col-xl-6">
         <a href="" class="btn">Next</a>
       </div>
