--- a/app/overview.html
+++ b/app/overview.html
@@ -18,8 +18,8 @@
           <a href="https://storj.io/share.html"><img src="imgs/logo-horizontal.svg" alt="Storj Share" class="logo-horizontal"></a>
         </div>
         <div class="col-9 text-right">
-          <a href="" class="btn btn-secondary mr-1">Settings</a>
-          <a href="" class="btn">+ Add Drive</a>
+          <a href="" class="btn btn-secondary mt-3 mr-1">Settings</a>
+          <a href="" class="btn mt-3">+ Add Drive</a>
         </div>
       </div>
     </div>
