--- a/app/overview.html
+++ b/app/overview.html
@@ -210,5 +210,8 @@
     </div>
   </footer>
 
+  <script src="node_modules/jquery/dist/jquery.min.js" type="text/javascript"></script>
+  <script src="node_modules/bootstrap/dist/js/bootstrap.min.js" type="text/javascript"></script>
+
 </body>
 </html>
