--- a/app/overview.html
+++ b/app/overview.html
@@ -48,7 +48,7 @@
                 <th>Peers</th>
                 <th>Shared</th>
                 <th class="text-right">
-                  <div class="dropdown"><!-- Add class "show" to display the dropdown contents. -->
+                  <div class="dropdown">
                     <a class="node-options btn-secondary dropdown-toggle" href="" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       <img src="imgs/icon-settings.svg" alt="Options">
                     </a>
@@ -73,7 +73,7 @@
                 <td>1,799</td>
                 <td>85%</td>
                 <td class="text-right">
-                  <div class="dropdown"><!-- Add class "show" to display the dropdown contents. -->
+                  <div class="dropdown">
                     <a class="node-options btn-secondary dropdown-toggle" href="" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       <img src="imgs/icon-settings.svg" alt="Options">
                     </a>
@@ -98,7 +98,7 @@
                 <td>824</td>
                 <td>92%</td>
                 <td class="text-right">
-                  <div class="dropdown"><!-- Add class "show" to display the dropdown contents. -->
+                  <div class="dropdown">
                     <a class="node-options btn-secondary dropdown-toggle" href="" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       <img src="imgs/icon-settings.svg" alt="Options">
                     </a>
