--- a/app/storjshare.html
+++ b/app/storjshare.html
@@ -479,6 +479,8 @@
           <p>Storj Share {{version}}</p>
           <p>Core Library {{core}}</p>
           <p>Protocol {{protocol}}</p>
+          <p>Electron {{electron}}</p>
+          <p>Chrome {{chrome}}</p>
         </div>
       </div>
     </div>
