dropdown & log components started, overview with functional start/stop, poor log performance

--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,6 @@
   <section id="app">
     <router-view></router-view>
   </section>
-  <script defer async src="renderer.js" type="text/javascript"></script>
+  <script defer src="renderer.js" type="text/javascript"></script>
 </body>
 </html>
