revising updater, working now

--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,7 @@
 
 <body>
   <section id="app">
+    <updater></updater>
     <router-view></router-view>
   </section>
   <script defer src="renderer.js" type="text/javascript"></script>
