--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,7 @@
 
 <body>
   <section id="app">
+    <terms></terms>
     <about></about>
     <updater></updater>
     <router-view></router-view>
