--- a/app/index.html
+++ b/app/index.html
@@ -7,8 +7,7 @@
   <title>Storj Share</title>
 
   <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800" rel="stylesheet">
-
+  <link href="css/fonts.css" rel="stylesheet">
   <link href="css/animations.css" rel="stylesheet">
   <link href="css/style_new.css" rel="stylesheet">
 </head>
